tests/fixtures/fail/continue_outside_loop.sc
let main(): i32 = {
  continue()
}
